appId: com.daffo.upapp
name: Open menu and tap Logout
---
- tapOn: "Open menu"
- waitForAnimationToEnd
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn: "Logout"
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          point: "75%,38%"
