appId: com.daffo.upapp
name: Open menu and tap My Badges
---
- tapOn: "Open menu"
- waitForAnimationToEnd
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn: "My Badges"
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          point: "75%,26%"
