appId: com.daffo.upapp
name: Open menu and tap My Logs
---
- tapOn: "Open menu"
- waitForAnimationToEnd
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn: "My Logs"
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          point: "75%,18%"
